# SPA4321-2016

./: README.md  SectionBFeedback.txt
1. MyFirstProject/: CMakeLists.txt
10. CentreOfMass/: CMakeLists.txt  main.cpp
2. MySecondProject/: CMakeLists.txt  main.cpp
3. HelloWorld/: CMakeLists.txt  main.cpp
4. Console/: CMakeLists.txt
5. BuiltInTypes/: CMakeLists.txt  main.cpp
6. IntegerDivision/: CMakeLists.txt
7. SimpleMaths/: CMakeLists.txt  main.cpp
8. Precedence/: CMakeLists.txt  main.cpp
9. MathFunctions/: CMakeLists.txt  main.cpp
BuiltInTypes/: CMakeLists.txt  README  main.cpp
Console/: CMakeLists.txt  main.cpp
Ex1.1/: CMakeLists.txt  main.cpp
Ex1.2/: CMakeLists.txt  main.cpp
Ex1.3/: CMakeLists.txt  main.cpp
Ex1.4/: CMakeLists.txt  main.cpp
Ex1.5/: CMakeLists.txt  main.cpp
Ex1.6/: CMakeLists.txt  main.cpp
Ex2.1/: CMakeLists.txt  main.cpp
Ex2.2/: CMakeLists.txt  main.cpp
Ex2.3/: CMakeLists.txt  Window.cpp  functions.cpp  functions.h  main.cpp
Ex2.4/: CMakeLists.txt  Window.h  functions.cpp  functions.h  main.cpp
Ex2.5/: CMakeLists.txt  Window.h  main.cpp
Ex2.6/: CMakeLists.txt  Colours.h  main.cpp
Ex2.7/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Ex2.8/: CMakeLists.txt  Line.h  Shape.cpp  Shape.h  Window.cpp  Window.h  main.cpp
Ex3.1/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  random.cpp  random.h
FileInput/: CMakeLists.txt  main.cpp
FileState/: CMakeLists.txt  main.cpp
FilesOutput/: CMakeLists.txt  main.cpp
HelloWorld/: README
IntegerDivision/: CMakeLists.txt  main.cpp
(+1 files in other folders)
